--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Nata</a>
+          <a class="nav-link active" aria-current="page" href="./nata.html">Nata</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -52,7 +52,7 @@
 <main>
     <h1>Este es nuestro portaflio de estudiantes en un repo compartido</h1>
     <div>
-        <img src="./assets/2207_w048_n005_187b_p1_187.jpg" alt="">
+        <img src="../assets/2207_w048_n005_187b_p1_187.jpg" alt="imagen amigos">
     </div>
 </main>
 
