--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-     <link rel="stylesheet" href="../css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/index.css">
   </head>
     <title>principal</title>
 </head>
@@ -31,7 +31,7 @@
             <li><a class="dropdown-item" href="#">WEEB  JUAN SEBASTIAN </a></li>
             <li><a class="dropdown-item" href="#">CRUZ CORTES JOAN CAMILO</a></li>
             <li><a class="dropdown-item" href="#">RESTREPO MENDEZ SAMUEL </a></li>
-            <li><a class="dropdown-item" href="#">BERMÚDEZ BUITRAGO GERMÁN ALIRIO </a></li>
+            <li><a class="dropdown-item" href="./german.html">BERMÚDEZ BUITRAGO GERMÁN ALIRIO </a></li>
             <li><a class="dropdown-item" href="#">TAMAYO ARCILA TOBIAS </a></li>
             <li><a class="dropdown-item" href="#">ANDRADE GUTIERREZ JOSE IGNACIO</a></li>
             <li><a class="dropdown-item" href="#">ACERO SIERRA CRISTIAN ARLEY </a></li>
