Cambios realizados por Tobias en index linea 35

--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
             <li><a class="dropdown-item" href="#">CRUZ CORTES JOAN CAMILO</a></li>
             <li><a class="dropdown-item" href="#">RESTREPO MENDEZ SAMUEL </a></li>
             <li><a class="dropdown-item" href="#">BERMÚDEZ BUITRAGO GERMÁN ALIRIO </a></li>
-            <li><a class="dropdown-item" href="#">TAMAYO ARCILA TOBIAS </a></li>
+            <li><a class="dropdown-item" href="./tobias.html">TAMAYO ARCILA TOBIAS </a></li>
             <li><a class="dropdown-item" href="#">ANDRADE GUTIERREZ JOSE IGNACIO</a></li>
             <li><a class="dropdown-item" href="#">ACERO SIERRA CRISTIAN ARLEY </a></li>
             <li><a class="dropdown-item" href="#">CARLUCCI LOAIZA VICTOR ARMANDO</a></li>
