--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
             <li><a class="dropdown-item" href="#">RAMIREZ PIÑEROS BRAYAN ORLEY</a></li>
             <li><a class="dropdown-item" href="#">MAIGUEL MONTOYA NICOLAS </a></li>
             <li><a class="dropdown-item" href="#">WELLS RESTREPO NICHOLAS </a></li>
-            <li><a class="dropdown-item" href="#">PÉREZ BARRERA JADERSON GEOVANNY</a></li>
+            <li><a class="dropdown-item" href="./jaderson.html">PÉREZ BARRERA JADERSON GEOVANNY</a></li>
             <li><a class="dropdown-item" href="#">BELTRAN VARGAS FABIAN ANDRES</a></li>
           </ul>
         </li>
