--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,8 @@
             <li><a class="dropdown-item" href="#">MAIGUEL MONTOYA NICOLAS </a></li>
             <li><a class="dropdown-item" href="#">WELLS RESTREPO NICHOLAS </a></li>
             <li><a class="dropdown-item" href="#">PÉREZ BARRERA JADERSON GEOVANNY</a></li>
-            <li><a class="dropdown-item" href="#">BELTRAN VARGAS FABIAN ANDRES</a></li>
+            <li><a class="dropdown-item" href="./luisa.html">BELTRAN VARGAS FABIAN ANDRES</a></li>
+            <li><a class="dropdown-item" href="#">BERNAL GORDILLO LUISA FERNANDA</a></li>
           </ul>
         </li>
       </ul>
