Agregado horacio.html y nuevo enlace en index.html

--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
             <li><a class="dropdown-item" href="#">ANDRADE GUTIERREZ JOSE IGNACIO</a></li>
             <li><a class="dropdown-item" href="#">ACERO SIERRA CRISTIAN ARLEY </a></li>
             <li><a class="dropdown-item" href="#">CARLUCCI LOAIZA VICTOR ARMANDO</a></li>
-            <li><a class="dropdown-item" href="#">MENDOZA BELTRAN HORACIO ANTONIO</a></li>
+            <li><a class="dropdown-item" href="./horacio.html">MENDOZA BELTRAN HORACIO ANTONIO</a></li>
             <li><a class="dropdown-item" href="#">LOPEZ BASTIDAS GISSELA MARIA</a></li>
             <li><a class="dropdown-item" href="#">RAMIREZ PIÑEROS BRAYAN ORLEY</a></li>
             <li><a class="dropdown-item" href="#">MAIGUEL MONTOYA NICOLAS </a></li>
