--- a/html/index.html
+++ b/html/index.html
@@ -43,6 +43,7 @@
             <li><a class="dropdown-item" href="#">WELLS RESTREPO NICHOLAS </a></li>
             <li><a class="dropdown-item" href="#">PÉREZ BARRERA JADERSON GEOVANNY</a></li>
             <li><a class="dropdown-item" href="#">BELTRAN VARGAS FABIAN ANDRES</a></li>
+            <li><a class="dropdown-item" href="#">BERNAL GORDILLO LUISA FERNANDA</a></li>
           </ul>
         </li>
       </ul>
